Fix: overflowing on the x-axis

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ nav {
   background-size: 100% 100%;
   background-color: white;
   border-bottom-left-radius: 90px;
+  overflow: hidden;
 }
 
 .coder {
